# fastapi-react-auth

./: README.md
backend/: .env.example  README.md  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py  security.py
backend/repositories/: blacklisted_token.py  user.py
backend/routers/: auth.py
backend/tests/: conftest.py  test_auth.py
frontend/: README.md  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts
frontend/src/contexts/: AuthContext.ts  AuthProvider.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: HomePage.tsx  SignInPage.tsx  SignUpPage.tsx
