[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.136.3",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.2.0",
    "pytest>=8.0.0",
]
